--- a/Clustering/makefile
+++ b/Clustering/makefile
@@ -1,8 +1,8 @@
 all : cluster
 
-cluster : Initializers.o Helper_Functions.o Cluster.o Cluster_DataTypes.o main.o
+cluster : Helper_Functions.o Initializers.o Assigners.o Cluster.o Cluster_DataTypes.o main.o
 	@echo "Compile Cluster ...";
-	g++ -std=c++11 -I ./lib ./build/Initializers.o ./build/Cluster.o ./build/Cluster_DataTypes.o ./build/main.o ./build/Helper_Functions.o -o ./build/cluster.x
+	g++ -std=c++11 -I ./lib ./build/main.o ./build/Cluster_DataTypes.o ./build/Cluster.o ./build/Assigners.o ./build/Initializers.o ./build/Helper_Functions.o -o ./build/cluster.x
 
 main.o :
 	g++ -std=c++11 -I ./lib -c ./src/Clustering_main.cpp -o ./build/main.o
@@ -12,6 +12,9 @@ Cluster_DataTypes.o :
 
 Cluster.o :
 	g++ -std=c++11 -I ./lib -c ./src/Clusters/Cluster.cpp -o ./build/Cluster.o
+
+Assigners.o :
+	g++ -std=c++11 -I ./lib -c ./src/Assigners/Assigners.cpp -o ./build/Assigners.o
 
 Initializers.o :
 	g++ -std=c++11 -I ./lib -c ./src/Initializers/Initializers.cpp -o ./build/Initializers.o
